src/test/deca/context/invalid/created/acces_field/field_protected_dynamique.deca
// Description :
//    acces à un field protegé
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 12 :(3.65) L’attribut est protégé

class A{
 protected int x;
}

{
A a = new A();
int b = a.x;
}